2009-11-12  Yuta Kitamura  <yutak@chromium.org>

Reviewed by Eric Seidel.

        Prevent text inside a multi-column block from being split into columns.

        If the tentative height of a multi-column block was too small, we need to
        expand the block height and try to layout again, in order to prevent text
        from being split into different columns.

        CSS Multicolumn text is split awkwardly
        https://bugs.webkit.org/show_bug.cgi?id=22249

        * fast/multicol/single-line.html: Added.
        * fast/multicol/single-line-expected.checksum: Added.
        * fast/multicol/single-line-expected.png: Added.
        * fast/multicol/single-line-expected.txt: Added.
2009-11-12  Yuta Kitamura  <yutak@chromium.org>

        Reviewed by Eric Seidel.

        Prevent text inside a multi-column block from being split into columns.

        If the tentative height of a multi-column block was too small, we need to
        expand the block height and try to layout again, in order to prevent text
        from being split into different columns.

        CSS Multicolumn text is split awkwardly
        https://bugs.webkit.org/show_bug.cgi?id=22249

        Test: fast/multicol/single-line.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutColumns):
        * rendering/RenderBlock.h:
        * rendering/RenderLineBoxList.cpp:
        (WebCore::RenderLineBoxList::paint):
        * rendering/RenderView.h:
        (WebCore::RenderView::setTruncatedAt):
        (WebCore::RenderView::setMinimumColumnHeight):
        (WebCore::RenderView::minimumColumnHeight):

Canonical link: https://commits.webkit.org/42298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50869 268f45cc-cd09-0410-ab3c-d52691b4dbfc